--- a/Project1.dproj
+++ b/Project1.dproj
@@ -114,6 +114,10 @@
             <Form>frmSrchOutput</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Window_About.pas">
+            <Form>frmAbout</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
